<resources>
    <string name="app_name">IzmirTripApp</string>
    <string name="izmir_travel_application">Izmir Travel Application</string>
    <string name="izmir_travel_application_welcome">Welcome To Izmir Travel Application</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="sign_in_to_contunie">Sign In To Contunie</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="signup_to_create_your_new_journey">Signup to create your New Journey</string>
    <string name="full_name">Full Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone No</string>
    <string name="welcome">Welcome,</string>
    <string name="Go">Go</string>
    <string name="already_have_an_account_login">Already have an account? LogIn</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Content">Content of The Place</string>
    <string name="links_for_place">LINKS FOR PLACE</string>
    <string name="search_address">Ara...</string>
    <string name="save">Kaydet</string>
    <string name="use_this_address">Kaydet</string>
    <string name="add_address">Add Route</string>
    <string name="cant_find_address">Adres Bulunamadi</string>
    <string name="address_title">Adres Başlığı</string>
    <string name="address">Adres</string>
    <string name="cannot_be_blank">Boş Geçilemez</string>
    <string name="logout">logout</string>

</resources>